service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: nginx-test
  name: nginx-test-nodeport
  namespace: yokoso
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-test
  type: NodePort
status:
  loadBalancer: {}
