sevice.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: nginx-test
  name: nginx-test-Nodeport
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-test
  type: Nodeport
status:
  loadBalancer: {}
